Fixed bug on mobile menu

--- a/share/web/css/sunriser.css
+++ b/share/web/css/sunriser.css
@@ -1699,7 +1699,7 @@ td.contactlabel {
     border-bottom: 2px solid rgba(0,0,0,0.6);
     box-shadow: 0 1px 1px rgba(0,0,0,0.15);
   }
-  nav .selected a,
+  nav .selected > a,
   nav .selected{
     height:60px;
     border-bottom: 2px solid rgba(0,0,0,0.3);
